--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* HERO SECTION */
+/* page bg */
 .hero {
     height: 100vh;
     background: url("https://assets.nflxext.com/ffe/siteui/vlv3/5f0fbc43-3e17-4d8c-bc31-63f495fac1e7/6b6f21d5-bb2e-4db1-a1e0-9f741b52d7c5/IN-en-20240101-popsignuptwoweeks-perspective_alpha_website_large.jpg")
